--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@ant-design/pro-components": "^2.4.4",
     "@umijs/max": "^4.3.31",
     "antd": "^5.4.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
