--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@umijs/max": "^4.3.31",
     "antd": "^5.4.0",
     "react-hot-toast": "^2.4.1",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
