--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "author": "a1ex <peterxhhx@gmail.com>",
   "scripts": {
-    "build": "max build",
-    "dev": "max dev",
+    "build": "cross-env UMI_ENV=prod max build",
+    "dev": "cross-env UMI_ENV=dev max dev",
     "format": "prettier --cache --write .",
     "postinstall": "max setup",
     "prepare": "husky",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "cross-env": "^7.0.3",
     "husky": "^9",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
