--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ant-design/pro-components": "^2.4.4",
     "@umijs/max": "^4.3.31",
     "antd": "^5.4.0",
+    "classnames": "^2.5.1",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "zustand": "^5.0.2"
